Add build script to Cinder source and BasicApp to make building easier

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,9 @@ jniLibs/
 # cmake generated files
 cinderConfig.cmake
 
+# Clang
+.cache/
+
 # CinderBlocks
 blocks/
 !blocks/[__AppTemplates,Box2D,Cairo,FMOD,LocationManager,MotionManager,OSC,QuickTime,TUIO]
